@@ -22,6 +22,7 @@ New Features
 ----------------------
 
 * SOLR-1525 allow DIH to refer to core properties (noble)
+* SOLR-1547 TemplateTransformer copy objects more intelligently when there when the template is a single variable (noble)
 
 Optimizations
 ----------------------
